Fixed some meta data and added extra PowR

--- a/BlazorProCodeSnippets/BlazorProCodeSnippets.csproj
+++ b/BlazorProCodeSnippets/BlazorProCodeSnippets.csproj
@@ -115,6 +115,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Blazor\Blazor PowR Glove.snippet">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
